<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark">

    <LinearLayout
        android:id="@+id/SearchContainer_ll"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_height"
        android:layout_marginTop="@dimen/margin_top_search"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="@drawable/bg_search_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/Filter_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/search_icon_container"
            android:layout_height="@dimen/search_icon_container"
            android:contentDescription="@string/cd_search"
            android:padding="12dp"
            android:src="@drawable/ic_search"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/SearchInput_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_small"
            android:background="@null"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/hint_search"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint"
            android:textSize="@dimen/text_body" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/Filter_btn"
        android:layout_width="@dimen/search_height"
        android:layout_height="@dimen/search_height"
        android:layout_marginTop="@dimen/margin_top_search"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/bg_search_bar"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/nav_icon_size"
            android:layout_height="@dimen/nav_icon_size"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_filter"
            android:src="@drawable/ic_filter"
            app:tint="@color/white" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/Sort_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SearchContainer_ll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_date"
            android:textColor="@color/green"
            android:textSize="@dimen/text_label_large"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginEnd="@dimen/nav_item_gap" />

        <ImageView
            android:layout_width="@dimen/sort_icon_size"
            android:layout_height="@dimen/sort_icon_size"
            android:src="@drawable/ic_sort"
            app:tint="@color/green"
            android:contentDescription="@string/cd_sort" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Courses_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/Sort_ll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_course" />

</androidx.constraintlayout.widget.ConstraintLayout>